--- a/app/src/main/res/layout/activity_cash.xml
+++ b/app/src/main/res/layout/activity_cash.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.baidu.mapapi.map.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
@@ -18,14 +19,15 @@
             android:id="@+id/whewView_U_U"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <com.huiche.lib.lib.custemview.CircleImageView
-            android:layout_width="30dp"
             android:id="@+id/user_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:src="@drawable/head_merchants"
-            app:border_width="1dp"
             app:border_color="@color/status_color"
-            android:layout_height="30dp">
+            app:border_width="1dp">
 
         </com.huiche.lib.lib.custemview.CircleImageView>
 
@@ -33,9 +35,9 @@
             android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
             android:background="@color/white"
             android:orientation="horizontal">
 
@@ -46,49 +48,53 @@
                 android:layout_marginLeft="10dp"
                 android:padding="5dp"
                 android:src="@drawable/addressss" />
+
             <LinearLayout
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="3dp"
-                android:orientation="vertical"
                 android:layout_weight="1"
-                android:layout_height="match_parent">
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_city"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_marginTop="3dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="3dp"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="柏景台13楼A室"
                     android:textColor="#ABABAB"
-                    android:textSize="14sp"
-                    android:gravity="center_vertical"
-                    android:id="@+id/tv_city" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_preferential"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="2dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="2dp"
                 android:text="附近0个商家发券"
                 android:textColor="#ABABAB"
                 android:textSize="14sp" />
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="44dp"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="25dp"
-            android:orientation="vertical"
-           android:layout_centerVertical="true"
             android:layout_marginTop="20dp"
+            android:orientation="vertical"
 
             >
+
             <RelativeLayout
                 android:id="@+id/rl_restar"
                 android:layout_width="match_parent"
@@ -97,13 +103,11 @@
                 android:background="@drawable/bg_cash">
 
                 <ImageView
-                    android:layout_centerInParent="true"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_centerInParent="true"
                     android:src="@drawable/daohangdiz" />
             </RelativeLayout>
-
-
 
 
             <RelativeLayout
@@ -112,10 +116,11 @@
                 android:layout_height="44dp"
                 android:layout_marginBottom="2dp"
                 android:background="@drawable/bg_cash">
+
                 <ImageView
-                    android:layout_centerInParent="true"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:layout_centerInParent="true"
 
                     android:src="@drawable/kabaon" />
 
