--- a/app/src/main/res/layout/card_item_dialog.xml
+++ b/app/src/main/res/layout/card_item_dialog.xml
@@ -1,56 +1,62 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
     android:clipToPadding="true"
-    android:orientation="horizontal"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="110dp"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_height="@dimen/y100">
+        android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="0dp"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@color/white"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
-                <com.huiche.view.CircleImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.huiche.lib.lib.custemview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/icon"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginLeft="13dp"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="9dp"
                     android:src="@drawable/ic_launcher"
                     app:border_color="@color/transparent" />
+
                 <LinearLayout
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_height="match_parent">
+                    android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/tv_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_toRightOf="@id/icon"
                         android:paddingLeft="@dimen/dp_10"
-                        android:text="涛记自选快餐"
-                        android:layout_marginRight="5dp"
                         android:singleLine="true"
+                        android:text="涛记自选快餐"
                         android:textColor="#4B4B4B"
                         android:textSize="18sp" />
+
                     <TextView
                         android:id="@+id/tv_2"
                         android:layout_width="wrap_content"
@@ -67,11 +73,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
                 android:gravity="center_vertical"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_3"
                     android:layout_width="wrap_content"
@@ -79,25 +86,27 @@
                     android:layout_marginLeft="16dp"
                     android:background="@drawable/bg_delete_dialog"
                     android:gravity="center"
-                    android:paddingBottom="8dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="22dp"
+                    android:paddingRight="22dp"
+                    android:paddingTop="6dp"
                     android:text="商家详情"
                     android:textColor="#676767"
                     android:textSize="14dp" />
+
                 <TextView
                     android:id="@+id/tv_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_toRightOf="@id/tv_3"
                     android:background="@drawable/buton_blue_shape"
                     android:gravity="center"
-                    android:paddingBottom="8dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="32dp"
+                    android:paddingRight="32dp"
+                    android:paddingTop="6dp"
+                    android:singleLine="true"
                     android:text="点击领取"
                     android:textColor="#fff"
                     android:textSize="14dp" />
@@ -109,35 +118,38 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/card_bl"
-            android:layout_height="wrap_content">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_5"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="6dp"
+                    android:layout_marginBottom="1dp"
                     android:layout_marginRight="3dp"
                     android:gravity="bottom"
-                    android:paddingBottom="@dimen/dp_10"
+                    android:paddingBottom="7dp"
                     android:text="￥"
+
                     android:textColor="#fff"
                     android:textSize="20dp" />
+
                 <TextView
                     android:id="@+id/tv_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:paddingBottom="@dimen/dp_10"
+                    android:paddingBottom="8dp"
                     android:paddingRight="@dimen/dp_10"
                     android:paddingTop="15dp"
                     android:text="20"
@@ -145,19 +157,21 @@
                     android:textSize="30sp" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginLeft="8dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:gravity="center_horizontal"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/tv_6"
-                    android:layout_marginRight="@dimen/dp_10"
+                    android:layout_marginRight="3dp"
                     android:text="满100可用"
                     android:textColor="#fff"
                     android:textSize="15dp" />
@@ -167,16 +181,17 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/img_dele"
-        android:layout_width="@dimen/x40"
-        android:src="@drawable/cicle_delete"
-        android:layout_height="@dimen/y40"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
         android:layout_alignBottom="@+id/linearLayout"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="@dimen/x8"
-        android:layout_marginBottom="@dimen/y70" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="90dp"
+        android:layout_marginRight="6dp"
+        android:src="@drawable/cicle_delete" />
 
 
-    </RelativeLayout>
+</RelativeLayout>
